--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     <!-- Header -->
     <header>
+        <h1 class="title">Test title text</h1>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
